--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ body {
 .form-control input {
   width: 100%;
   height: 40px;
-  margin: 5px;
+  /* margin: 5px; */
   padding: 3px 7px;
   font-size: 17px;
 }
